--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd-mobile": "^1.3.1",
     "history": "^4.6.1",
     "immutable": "^3.8.1",
     "react": "^15.5.4",
@@ -12,6 +13,7 @@
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
